Done API for getting stat's from ImDB, really tricky.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
+    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.7'
+    compile group: 'io.reactivex.rxjava2', name: 'rxandroid', version: '2.0.1'
+    compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
     testCompile 'junit:junit:4.12'
 }
