--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.1'
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.7'
     compile group: 'io.reactivex.rxjava2', name: 'rxandroid', version: '2.0.1'
-    compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+    compile group: 'com.jakewharton.rxbinding2', name: 'rxbinding', version: '2.0.0'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
     compile 'com.github.Omertron:api-omdb:API-OMDB-1.4'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
