--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.MovieRolled">
+        <activity
+            android:name=".ui.activity.MovieRolled"
+            android:configChanges="orientation|screenSize">
         </activity>
     </application>
 
