--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,23 @@
         </activity>
         <activity
             android:name=".ui.activity.MovieRolled"
+            android:theme="@android:style/Theme.Material.Light"
             android:configChanges="orientation|screenSize">
         </activity>
     </application>
+
+    <meta-data
+        android:name="DATABASE"
+        android:value="ignored_movies.db"/>
+    <meta-data
+        android:name="VERSION"
+        android:value="1"/>
+    <meta-data
+        android:name="QUERY_LOG"
+        android:value="true"/>
+    <meta-data
+        android:name="DOMAIN_PACKAGE_NAME"
+        android:value="apps.scvh.com"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
