--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,19 +44,22 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
+    //RXjava
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.0.7'
     compile group: 'io.reactivex.rxjava2', name: 'rxandroid', version: '2.0.1'
     compile group: 'com.jakewharton.rxbinding2', name: 'rxbinding', version: '2.0.0'
+    //Here goes stuff for API
     compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
     compile 'com.github.Omertron:api-omdb:API-OMDB-1.4'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    //Dependency Injection
     compile group: 'com.google.dagger', name: 'dagger', version: '2.10'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
-    testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.10'
     compile 'javax.inject:javax.inject:1'
     provided 'javax.annotation:jsr250-api:1.0'
     compile group: 'com.jakewharton', name: 'butterknife', version: '8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    //ORM and tests
     compile 'com.github.satyan:sugar:1.4'
     testCompile 'junit:junit:4.12'
 }
